--- a/assets/index.html
+++ b/assets/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <script src="https://kit.fontawesome.com/f4affba74f.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
+
+    <header>
+        <div class="container flex justify-content align-items">
+
+            <div class="text">
+                <span>Donna</span>
+                <span>Uomo</span>
+                <span>Bambino</span>
+            </div>
+
+            <div class="logo">
+                <img class="logo" src="../assets/img/boolean-logo.png" alt="Logo">
+            </div>
+
+            <div class="icons">
+                <span><i class="fa-regular fa-user"></i></span>
+                <span><i class="fa-regular fa-heart"></i></span>
+                <span><i class="fa-solid fa-bag-shopping"></i></span>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div class="cont2">
+            <div class="box">
+                <img src="../assets/img/1.jpg" alt="" class="img img1">
+                <img src="../assets/img/1b.jpg" alt="" class="img img2">
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
