--- a/assets/index.html
+++ b/assets/index.html
@@ -14,9 +14,9 @@
         <div class="container flex justify-content align-items">
 
             <div class="text">
-                <span>Donna</span>
-                <span>Uomo</span>
-                <span>Bambino</span>
+                <span class="menù">Donna</span>
+                <span class="menù">Uomo</span>
+                <span class="menù">Bambino</span>
             </div>
 
             <div class="logo">
@@ -24,21 +24,173 @@
             </div>
 
             <div class="icons">
-                <span><i class="fa-regular fa-user"></i></span>
-                <span><i class="fa-regular fa-heart"></i></span>
-                <span><i class="fa-solid fa-bag-shopping"></i></span>
+                <span><i class="i-head fa-regular fa-user"></i></span>
+                <span><i class="i-head fa-regular fa-heart"></i></span>
+                <span><i class="i-head fa-solid fa-bag-shopping"></i></span>
             </div>
         </div>
     </header>
 
     <main>
-        <div class="cont2">
-            <div class="box">
-                <img src="../assets/img/1.jpg" alt="" class="img img1">
-                <img src="../assets/img/1b.jpg" alt="" class="img img2">
-            </div>
+        <div class="cont1 flex justify-content flex-wrap">
+
+            <div class="cont2">
+                <div class="box">
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="../assets/img/1.jpg" alt="" class="img img1">
+                    <img src="../assets/img/1b.jpg" alt="" class="img img2">
+
+                    <div class="text-int">
+                        <span class="red">-50%</span>
+                        <span class="green">Sostenibilità</span>
+                    </div>
+                </div>
+
+                <div class="text-est">
+                    <h6 class="grey">Levi's</h6>
+                    <h4>RELAXED FIT TEE UNISEX</h4>
+                    <h6 class="line text-red">14,99 $</h6>
+                    <h6 class="line grey sbarra">29,99 $</h6>
+                </div>
+             </div>
+
+
+             <div class="cont2">
+                <div class="box">
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="../assets/img/2.jpg" alt="" class="img img1">
+                    <img src="../assets/img/2b.jpg" alt="" class="img img2">
+
+                    <div class="text-int">
+                        <span class="red">-30%</span>
+                    </div>
+                </div>
+
+                <div class="text-est">
+                    <h6 class="grey">Guess</h6>
+                    <h4>ROSES TEE</h4>
+                    <h6 class="line text-red">20,99 $</h6>
+                    <h6 class="line grey sbarra">29,99 $</h6>
+                </div>
+             </div>
+
+
+             <div class="cont2">
+                <div class="box">
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="../assets/img/3.jpg" alt="" class="img img1">
+                    <img src="../assets/img/3b.jpg" alt="" class="img img2">
+
+                    <div class="text-int">
+                        <span class="red">-30%</span>
+                    </div>
+                </div>
+
+                <div class="text-est">
+                    <h6 class="grey">Come Zucchero filato</h6>
+                    <h4>VOGLIA DI COLORI PASTELLO</h4>
+                    <h6 class="line text-red">129,99 $</h6>
+                    <h6 class="line grey sbarra">184,99 $</h6>
+                </div>
+             </div>
+
+
+             <div class="cont2">
+                <div class="box">
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="../assets/img/4.jpg" alt="" class="img img1">
+                    <img src="../assets/img/4b.jpg" alt="" class="img img2">
+
+                    <div class="text-int">
+                        <span class="red">-50%</span>
+                        <span class="green">Sostenibilità</span>
+                    </div>
+                </div>
+
+                <div class="text-est">
+                    <h6 class="grey">Levi's</h6>
+                    <h4>TEE UNISEX</h4>
+                    <h6 class="line text-red">14,99 $</h6>
+                    <h6 class="line grey sbarra">29,99 $</h6>
+                </div>
+             </div>
+
+
+             <div class="cont2">
+                <div class="box">
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="../assets/img/5.jpg" alt="" class="img img1">
+                    <img src="../assets/img/5b.jpg" alt="" class="img img2">
+
+                </div>
+
+                <div class="text-est">
+                    <h6 class="grey">Maya Deluxe</h6>
+                    <h4>STRIPE BODICE</h4>
+                    <h6 class="line text-red">99,99 $</h6>
+                </div>
+             </div>
+
+
+             <div class="cont2">
+                <div class="box">
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <img src="../assets/img/6.jpg" alt="" class="img img1">
+                    <img src="../assets/img/6b.jpg" alt="" class="img img2">
+
+                    <div class="text-int">
+                        <span class="green">Sostenibilità</span>
+                    </div>
+                </div>
+
+                <div class="text-est">
+                    <h6 class="grey">Esprit</h6>
+                    <h4>MAGLIONE BLACK</h4>
+                    <h6 class="line text-red">29,99 $</h6>
+                </div>
+             </div>
+
         </div>
     </main>
+
+    <footer>
+        <div class="cont3 flex justify-content">
+            <div class="right">
+                <h4>Boolando s.r.l</h4>
+                <h6 class="destra">Informazioni legali</h6>
+                <h6 class="destra">Informazioni sulla privacy</h6>
+                <h6 class="destra">Diritto di recesso</h6>
+            </div>
+
+            <div class="left">
+                <h4>Trovaci anche su</h4>
+                <span><i class="fa-brands fa-square-twitter"></i></span>
+                <span><i class="icon-f fa-brands fa-square-facebook"></i></span>
+                <span><i class="icon-f fa-brands fa-square-instagram"></i></span>
+                <span><i class="icon-f fa-brands fa-square-pinterest"></i></span>
+                <span><i class="icon-f fa-brands fa-square-youtube"></i></span>
+            </div>
+        </div>
+
+    </footer>
     
 </body>
 </html>
